<resources>
    <string name="app_name">StoryAplication</string>
    <string name="login">Masuk</string>
    <string name="signup">Daftar</string>
    <string name="title_welcome_page">Selamat Datang di Story App</string>
    <string name="message_welcome_page">Berbagi Ceritamu Yang Seru Dengan Nyaman </string>
    <string name="welcomeText">Sudah Siap memulai aplikasi ?</string>
    <string name="welcomeLogin">Masukan dulu datamu</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="daftar">Lengkapi data dirimu dibawah ini</string>
    <string name="name">Nama</string>
    <string name="registration_successful">Berhasil Registrasi</string>
    <string name="email_is_already_taken">Email Sudah Terdaftar</string>
    <string name="network_error">Terjadi Masalah Jaringan</string>
    <string name="username_password_is_incorrect">Invalid Password</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="no_connection">waktu koneksi habis</string>
    <string name="error">Permintaan tidak dapat dimuat</string>
    <string name="list_story">User Story List</string>
    <string name="no_data">Data Tidak Ditemukan</string>
    <string name="logout_confirm">Log Out Account ?</string>
    <string name="permission_request_granted">Permission request granted</string>
    <string name="permission_request_denied">Permission request denied</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="server_timeout">Server Timeout</string>
    <string name="an_error_occurred_please_try_again_later">an error occurred please try again later</string>
</resources>